# mcpstead

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package.json
.github/workflows/: release.yml
config/: mcporter.json  mcpstead.yaml
lib/: platform.js  run.js
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
scripts/: sync-npm-version.cjs
src/: config.rs  constants.rs  downstream.rs  main.rs  metrics.rs  reload.rs  state.rs  upstream.rs
tests/: cli_config.rs
