[package]
name = "mcpstead"
version = "0.1.9"
# Rust 2024 edition requires Rust 1.85 or newer.
edition = "2024"
rust-version = "1.85"
description = "MCP Gateway"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ahkohd/mcpstead"
homepage = "https://github.com/ahkohd/mcpstead"
documentation = "https://docs.rs/mcpstead"

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
subtle = "2"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "fs",
] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
